--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "nodemon": "^2.0.3"
   },
   "scripts": {
-    "start": "node index.js"
-  }
+    "start": "nodemon index.js"
+  },
+  "name": "dockernode",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "eliasallex <cod3er4@gmail.com>",
+  "license": "MIT"
 }
